more spacing issues

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -137,12 +137,14 @@ div {
 	color: #000000;
 	&:hover {
     color: #707070;
-  }
-  
+  }  
 	}
-		
+	
+.span6 {
+	padding-top: 0px;
+	}
+			
 .span9 {
-
   display: inline-block;
 	}	
 
@@ -252,11 +254,14 @@ input.search-query {
 	}
 
 #page-numbers {
-	margin-bottom: 40px;
-	padding-right: 32px;
+	padding-right: 20px;
 	float: right;
 	}
-		
+	
+.top-subtext {
+	margin-bottom: 40px;
+	}
+
 #login {
 	float: right;
 	color: #808285;
@@ -295,7 +300,7 @@ input.search-query {
 	}
 
 .back-link {
-	margin-bottom: 40px;
+
 	}
 
 
